[package]
name = "mb_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
# Upgrade to 0.8 to match async-graphql-axum
axum = "0.8"

async-graphql = { version = "7.0", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }

